--- a/WebApplication2/WebApplication2.csproj
+++ b/WebApplication2/WebApplication2.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\rrr.cs" />
     <Compile Include="Models\webapi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
